--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ ul {
     padding:0;
     list-style:none;
 }
+li {
+    padding:5px;
+}
 .header {
     display:flex;
     justify-content:space-around;
@@ -17,13 +20,53 @@ ul {
     height:100px;
 }
 .headerlogo {
-    font-size:32px;
+    font-size:24px;
     font-weight:500;
+    color:#f9faf8;
+    border-bottom:solid #f9faf8 3px;
 }
 .headerlinks {
     display:flex;
     justify-content:space-between;
 }
-li {
+.hero {
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    padding:10px;
+    gap:20px;
+    background-color: #1f2937;
+    color:white;
+    margin-bottom:20px;
+    padding-bottom:20px;
+}
+.awesome {
+    display:flex;
+    flex-direction:column;
+    gap:20px;
+    width:400px;
+    border:solid white 5px;
+    padding:5px;
+    align-items:center;
+    text-align:center;
+}
+.heromaintext {
+    font-size:48px;
+    color: #f9faf8;
+}
+.herosubtext {
+    font-size:18px;
+    color:#e5e7eb;
+}
+.heroimage {
+    border:solid white 5px;
+}
+button {
+    background-color: #3882f6;
+    text-align:center;
+    font-size:16px;
+    color:white;
+    border-radius:5px;
+    border:none;
     padding:5px;
 }
