--- a/style.css
+++ b/style.css
@@ -78,7 +78,6 @@ button {
     display:flex;
     justify-content:center;
     text-align:center;
-    background-color:rgb(219, 245, 236);
 }
 .boximage {
     border:solid black 4px;
@@ -100,18 +99,29 @@ button {
 .quote {
     display:flex;
     flex-direction:column;
-    margin:10px auto;
-    width:700px;
-    padding:50px;
+    padding:100px;
+    background-color:#e5e7eb;
 }
 .mainquote {
     text-align:center;
     display:flex;
     justify-content:center;
     font-size:48px;
+    margin:0 auto;
+    width:700px;
 }
 .quotername {
     text-align:right;
     font-size:44px;
     font-weight:900;
+    margin:0 auto;
+    width:700px;
+}
+.infotitle {
+    text-align:center;
+    font-size:36px;
+    font-weight:bolder;
+    color:#1f2937;
+    text-decoration:underline overline #1f2937;
+    margin-bottom:10px;
 }
