--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ ul {
     list-style:none;
 }
 li {
-    padding:5px;
+    padding:2px;
 }
 .header {
     display:flex;
@@ -18,16 +18,19 @@ li {
     align-items:center;
     font-family: Arial, Helvetica, sans-serif;
     height:100px;
+    flex:1;
 }
 .headerlogo {
     font-size:24px;
-    font-weight:500;
+    font-weight:900;
     color:#f9faf8;
     border-bottom:solid #f9faf8 3px;
+    flex-shrink:0;
 }
-.headerlinks {
+.headerlinkers {
     display:flex;
     justify-content:space-between;
+    flex-wrap:wrap;
 }
 .hero {
     display:flex;
@@ -39,6 +42,8 @@ li {
     color:white;
     margin-bottom:20px;
     padding-bottom:20px;
+    flex:1;
+    flex-wrap:wrap;
 }
 .awesome {
     display:flex;
@@ -73,14 +78,18 @@ button {
 .middle {
     display:flex;
     flex-direction:column;
+    flex:1;
 }
 .info {
     display:flex;
     justify-content:center;
     text-align:center;
+    padding:50px;
+    flex-wrap:wrap;
 }
 .boximage {
     border:solid black 4px;
+    border-radius:10px;
 }
 .boximagetext {
     gap:10px;
@@ -88,6 +97,8 @@ button {
     display:flex;
     flex-direction:column;
     align-items:center;
+    flex:auto;
+
 }
 .boxtext {
     width:160px;
@@ -101,22 +112,34 @@ button {
     flex-direction:column;
     padding:100px;
     background-color:#e5e7eb;
-}
-.mainquote {
-    text-align:center;
-    display:flex;
+    flex-wrap:wrap;
+    flex:1;
+    gap:30px;
+    align-items:center;
     justify-content:center;
-    font-size:48px;
-    margin:0 auto;
-    width:700px;
 }
 .quotername {
+    word-wrap: break-word;
+    max-width: 600px;
     text-align:right;
     font-size:44px;
     font-weight:900;
-    margin:0 auto;
-    width:700px;
 }
+.joan {
+    margin-top:30px;
+}
+.wholequote {
+    max-width: 600px;
+}
+.mainquote {
+    max-width: 600px;
+    text-align:center;
+    margin: 0 auto;
+    font-size:36px;
+    font-style:italic;
+    color:#1f2937;
+}
+
 .infotitle {
     text-align:center;
     font-size:36px;
@@ -124,4 +147,39 @@ button {
     color:#1f2937;
     text-decoration:underline overline #1f2937;
     margin-bottom:10px;
+    margin-top:30px;
+}
+.cta {
+    background-color:#3882f6;
+    margin:10px auto;
+    max-width:1000px;
+    display:flex;
+    justify-content:space-around;
+    padding:30px;
+    border-radius:10px;
+    align-items:center;
+}
+.ctatext {
+    display:flex;
+    flex-direction:column;
+    gap:10px;
+    color:white;
+    margin:5px;
+}
+.ctamaintext {
+    font-size:20px;
+    font-weight:900;
+}
+.ctabuttoner {
+    border:solid white 3px;
+    border-radius:10px;
+    font-size:12px;
+    text-align:center;
+}
+.instagram {
+    border-bottom:solid white 2px;
+}
+.herobuttoner {
+    margin-bottom:5px;
+    border-radius:5px;
 }
